[package]
name = "minecraft-launcher-rust"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = "2.1"

[dependencies]
tauri = { version = "2.1", features = ["api-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.40", features = ["full"] }
dirs = "5.0"
uuid = { version = "1.10", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]